starlark-rust/starlark/src/typing/golden/un_op.golden
# @generated
# To regenerate, run:
# ```
# STARLARK_RUST_REGENERATE_GOLDEN_TESTS=1 cargo test -p starlark --lib tests
# ```

Code:
# Good.
x = -1
# Bad.
y = ~True
# Union good and bad.
z = -(1 if True else "")

Error:
error: Unary operator `~` is not available on the type `bool.type`
 --> filename:5:5
  |
5 | y = ~True
  |     ^^^^^
  |

Interfaces:
x: int.type
y: "never"
z: int.type
